--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <body>
             <h1><strong>Treats for Warm days :3</strong></h1>
             <img src="./images/Dessert .gif">
-            <p><a href="./recipes/boba-milk-tea.html">Boba Milk Tea</a></p>
-            <a href="./recipes/japanese-pudding.html">Japanese Custard Pudding</a>
-
+            <ul>
+                <li><a href="./recipes/bubble-milk-tea.html">Bubble Milk Tea</a></li>
+                <li><a href="./recipes/japanese-pudding.html">Japanese Custard Pudding</a></li>
+                <li><a href="./recipes/chinese-mango-pudding.html">Chinese Mango Pudding</a></li>
+            </ul>
         </body>
     </html>
