--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <img src="./images/Dessert .gif">
             <ul>
                 <li><a href="./recipes/bubble-milk-tea.html">Bubble Milk Tea</a></li>
-                <li><a href="./recipes/japanese-pudding.html">Japanese Custard Pudding</a></li>
+                <li><a href="./recipes/japanese-pudding.html">Japanese Custard Purin</a></li>
                 <li><a href="./recipes/chinese-mango-pudding.html">Chinese Mango Pudding</a></li>
             </ul>
         </body>
