--- a/recipes/chinese-mango-pudding.html
+++ b/recipes/chinese-mango-pudding.html
@@ -7,5 +7,24 @@
         <body>
             <h1>Chinese Mango Pudding</h1>
             <img src="../images/Mango pudding.jpg">
+            <h2>What is <em>Mango Pudding</em>?</h2>
+            <p>The texture of this pudding is soft, smooth and creamy, similar to a pot de crème. The taste is fresh, vibrant, not too sweet, and packed with mango flavor!</p>
+            <h2>Ingredients</h2>
+            <ul>
+                <li>1/2 cup (125ml) boiled hot water</li>
+                <li>1 packet (1 tbsp) unflavored gelatin (or agar-agar)</li>
+                <li>1/2 cup (100g) granulated sugar</li>
+                <li>pinch of salt</li>
+                <li>1 cup (250ml) coconut milk, evaporated milk, half and half (10% M.F.), or table cream (18% M.F.)</li>
+                <li>1 cup (250ml) mango puree</li>
+            </ul>
+            <h2>Steps</h2>
+            <ol>
+                <li>In a medium bowl, whisk together the gelatin and boiled hot water until no lumps remain.</li>
+                <li>Whisk in the sugar and salt until dissolved.</li>
+                <li>Stir in the coconut milk or cream, then mango puree until mixture is smooth.</li>
+                <li>Pour into 4 ramekins or small bowls. Cover and chill for a minimum of 2 hours before serving.</li>
+            </ol>
+            <p><strong>Recipe Provided by Little Sweet Baker</strong></p>
         </body>
     </html>
