--- a/recipes/japanese-pudding.html
+++ b/recipes/japanese-pudding.html
@@ -5,8 +5,45 @@
             <meta charset="utf-8">
         </head>
         <body>
-            <h1>Japanese Custard Pudding</h1>
+            <h1>Japanese Custard Purin</h1>
             <img src="../images/Pudding.gif">
+            <h2>What is <em>Japanese Custard Purin</em>?</h2>
+            <p>Japanese Custard Purin is an easy dessert to make that doesn't require any special oriental ingredients :D</p>
+            <h2>Ingredients</h2>
+            <h3>Custard Base</h3>
+                <ul>
+                    <li>400 ml of milk</li>
+                    <li>3 large eggs</li>
+                    <li>60 g of sugar</li>
+                    <li>1/2 tsp vanilla essence</li>
+                </ul>
+            <h3>Caramel Sauce</h3>
+                <ul>
+                    <li>70 g of sugar</li>
+                    <li>50 ml of water</li>
+                </ul>
+            <h2>Steps</h2>
+            <h3>Caramel Sauce</h3>
+                <ol>
+                    <li>Place the sugar and water (for the caramel sauce) in a small saucepan over medium heat until the sugar has dissolved.</li>
+                    <li>Keep cooking over medium heat till the sugar and water mixture turns into a beautiful amber colour. </li>
+                    <li>Turn the heat off and pour the sauce into 4 pudding molds.</li>
+                </ol>
+            <h3>Custard Base</h3>
+                <ol>
+                    <li>Place milk in a jug and microwave for a 1 a minute and a half to heat the milk up.</li>
+                    <li>Add the egg, sugar and vanilla essence into a mixing bowl and whisk all together. </li>
+                    <li>Add warm milk into the egg mixture gradually and stir to combine them all together.</li>
+                    <li>Strain the custard base using a sieve or strainer. </li>
+                    <li>Divide and pour the custard mixture into the 4 pudding molds (on top of the caramel sauce).</li>
+                    <li>Place the molds in a shallow flying pan and add about 750-1000ml water over high heat.</li>
+                    <li>Bring it to boil then turn the heat down to low, wrap the pan lid in a dry towel and put the lid on and leave it for simmer for 3-5 minutes. *1</li>
+                    <li>Turn the heat off and leave it for 15 minutes( do not open the lid).</li>
+                    <li>Take the molds out of the frying pan and allow them cool down.</li>
+                    <li>Refrigerate the molds for at least 1 hour.</li>
+                    <li>Serve it on a plate.</li>
+                </ol>
+            <p><strong>Recipe from Chopstick Chronicles</strong></strong> </p>
         </body>
 
     </html>
